@@ -291,6 +291,9 @@ public class LLVM_Function {
 	 */
 	public void reachingAnalysis() throws LLVM_OptimizationException{
 		for(LLVM_Block b : this.blocks) {
+			b.clearReaching();
+		}
+		for(LLVM_Block b : this.blocks) {
 			b.createGenKillSets();
 		}
 		this.createInOutReaching();
@@ -437,7 +440,7 @@ public class LLVM_Function {
 			}catch(NumberFormatException e){
 				// no numbers
 			}
-		}else if(cmd.getClass().equals(LLVM_IcmpCommand.class)){
+		}else if(cmd.getClass().equals(LLVM_XcmpCommand.class)){
 		
 			LinkedList<LLVM_Parameter> operands = cmd.getOperands();
 			LLVM_Parameter op1 = operands.get(0);
@@ -501,36 +504,51 @@ public class LLVM_Function {
 					boolean hasResult = true;
 					
 					switch(cmd.getOperation()){
-					case ICMP_EQ :
+					case FCMP_OEQ :
 						result = iOP1 == iOP2;
 						break;
-					case ICMP_NE :
+					case FCMP_ONE :
 						result = iOP1 != iOP2;
 						break;
-					case ICMP_UGT :
+					case FCMP_OGT :
 						result = iOP1 > iOP2;
 						break;
-					case ICMP_UGE :
+					case FCMP_OGE :
 						result = iOP1 >= iOP2;
 						break;
-					case ICMP_ULT :
+					case FCMP_OLT :
 						result = iOP1 < iOP2;
 						break;
-					case ICMP_ULE :
+					case FCMP_OLE :
 						result = iOP1 <= iOP2;
 						break;
-					case ICMP_SGT :
+					case FCMP_ORD :
+						hasResult = false;
+						break;
+					case FCMP_UGT :
 						result = iOP1 > iOP2;
 						break;
-					case ICMP_SGE :
+					case FCMP_UGE :
 						result = iOP1 >= iOP2;
 						break;
-					case ICMP_SLT :
+					case FCMP_ULT :
 						result = iOP1 < iOP2;
 						break;
-					case ICMP_SLE :
+					case FCMP_ULE :
 						result = iOP1 <= iOP2;
-						break;	
+						break;
+					case FCMP_UNE :
+						result = iOP1 != iOP2;
+						break;
+					case FCMP_UNO :
+						hasResult = false;
+						break;
+					case FCMP_TRUE :
+						result = true;
+						break;
+					case FCMP_FALSE :
+						result = false;
+						break;
 					default:
 						hasResult = false;
 						break;
@@ -540,6 +558,7 @@ public class LLVM_Function {
 						op1.setName(result?"1":"0");
 						op2.setName("0");
 						op1.setTypeString("i1");
+						op1.setType(LLVM_ParameterType.INTEGER);
 					}
 					
 					return true;
@@ -945,82 +964,107 @@ public class LLVM_Function {
 	 * Entferne Bloecke, die nur unbedingten Sprungbefehl enthalten
 	 */
 	public void deleteEmptyBlocks() throws LLVM_OptimizationException{
+		LLVM_Block nextFirst = null;
+		LLVM_Block lastFirst = null;
+		
 		// Gehe Bloecke durch
 		LinkedList<LLVM_Block> toDelete = new LinkedList<LLVM_Block>();
 		for(LLVM_Block actualBlock : this.blocks) {
-			// Enthaelt Block nur einen unbedingten Sprungbefehl?
-			if(!actualBlock.isEmpty() && actualBlock.getFirstCommand().
-					getOperation()==LLVM_Operation.BR) {
-				// Block kann geloescht werden
-				LLVM_Block targetBlock = actualBlock.getNextBlocks().getFirst();
-				String targetBlockLabel = targetBlock.getLabel();
-				String actualBlockLabel = actualBlock.getLabel();
-				
-				// Gehe Vorgaengerbloecke durch
-				for(LLVM_Block previousBlock : actualBlock.getPreviousBlocks()) {
-					// Hole Sprungbefehl des Vorgaengerblocks
-					// Dieser muss angepasst werden
-					LLVM_GenericCommand branchCommand = previousBlock.getLastCommand();
+			//if(actualBlock!=this.blocks.get(0)) {
+				// Enthaelt Block nur einen unbedingten Sprungbefehl?
+				if(!actualBlock.isEmpty() && actualBlock.getFirstCommand().
+						getOperation()==LLVM_Operation.BR) {
+					// Block kann geloescht werden
+					LLVM_Block targetBlock = actualBlock.getNextBlocks().getFirst();
+					String targetBlockLabel = targetBlock.getLabel();
+					String actualBlockLabel = actualBlock.getLabel();
 					
-					// Befehl aus Registermap austragen
-					this.registerMap.deleteCommand(branchCommand);
-					
-					for(LLVM_Parameter p : branchCommand.getOperands()){
-						if(actualBlockLabel.equals(p.getName())){
-							p.setName(targetBlockLabel);
-						}
+					if(actualBlock==this.blocks.get(0)) {
+						toDelete.add(actualBlock);
+						targetBlock.removeFromPreviousBlocks(actualBlock);
+						actualBlock.removeFromNextBlocks(targetBlock);
+						nextFirst = targetBlock;
+						lastFirst = actualBlock;
+						break;
 					}
 					
-					// Setze Registermapeintrag neu
-					this.registerMap.addCommand(branchCommand);
+					// Gehe Vorgaengerbloecke durch
+					for(LLVM_Block previousBlock : actualBlock.getPreviousBlocks()) {
+						// Hole Sprungbefehl des Vorgaengerblocks
+						// Dieser muss angepasst werden
+						LLVM_GenericCommand branchCommand = previousBlock.getLastCommand();
+						
+						// Befehl aus Registermap austragen
+						this.registerMap.deleteCommand(branchCommand);
+						
+						for(LLVM_Parameter p : branchCommand.getOperands()){
+							if(actualBlockLabel.equals(p.getName())){
+								p.setName(targetBlockLabel);
+							}
+						}
+						
+						// Setze Registermapeintrag neu
+						this.registerMap.addCommand(branchCommand);
+						
+						// Passe Flussgraph an:
+						// previousBlock hat actualBlock nicht mehr als Nachfolger,
+						// sondern targetBlock
+						// targetBlock hat previousBlock als Vorgaenger
+						targetBlock.appendToPreviousBlocks(previousBlock);
+						targetBlock.removeFromPreviousBlocks(actualBlock);
+						previousBlock.appendToNextBlocks(targetBlock);
+						previousBlock.removeFromNextBlocks(actualBlock);
+					}
+					toDelete.add(actualBlock);
+				}else if (!actualBlock.isEmpty() && actualBlock.getPreviousBlocks().size() > 0 && (actualBlock.getFirstCommand().
+						getOperation()==LLVM_Operation.RET || actualBlock.getFirstCommand().
+						getOperation()==LLVM_Operation.RET_CODE)){
 					
-					// Passe Flussgraph an:
-					// previousBlock hat actualBlock nicht mehr als Nachfolger,
-					// sondern targetBlock
-					// targetBlock hat previousBlock als Vorgaenger
-					targetBlock.appendToPreviousBlocks(previousBlock);
-					previousBlock.appendToNextBlocks(targetBlock);
-					previousBlock.removeFromNextBlocks(actualBlock);
+					if(actualBlock==this.blocks.get(0)) {
+						continue;
+					}
+					
+					for(LLVM_Block previousBlock : actualBlock.getPreviousBlocks()) {
+						LLVM_GenericCommand branchCommand = previousBlock.getLastCommand();
+						if(branchCommand.getOperation()==LLVM_Operation.BR_CON)
+							return;
+					}
+	
+					// Gehe Vorgaengerbloecke durch
+					for(LLVM_Block previousBlock : actualBlock.getPreviousBlocks()) {
+						// Hole Sprungbefehl des Vorgaengerblocks
+						// Dieser muss ersetzt werden
+						LLVM_GenericCommand branchCommand = previousBlock.getLastCommand();
+						
+						// Befehl aus Registermap austragen
+						this.registerMap.deleteCommand(branchCommand);
+						
+						// Clone für Registermap erstellen
+						LLVM_GenericCommand tmp = new LLVM_ReturnCommand(actualBlock.getFirstCommand().toString(), branchCommand.getPredecessor(), previousBlock);
+						branchCommand.replaceCommand(tmp);
+						
+						// Setze Registermapeintrag neu
+						this.registerMap.addCommand(tmp);
+						
+						// Passe Flussgraph an:
+						// previousBlock hat actualBlock nicht mehr als Nachfolger,
+						previousBlock.removeFromNextBlocks(actualBlock);
+					}
+					toDelete.add(actualBlock);
 				}
-				toDelete.add(actualBlock);
-			}else if (!actualBlock.isEmpty() && actualBlock.getPreviousBlocks().size() > 0 && (actualBlock.getFirstCommand().
-					getOperation()==LLVM_Operation.RET || actualBlock.getFirstCommand().
-					getOperation()==LLVM_Operation.RET_CODE)){
-				
-				for(LLVM_Block previousBlock : actualBlock.getPreviousBlocks()) {
-					LLVM_GenericCommand branchCommand = previousBlock.getLastCommand();
-					if(branchCommand.getOperation()==LLVM_Operation.BR_CON)
-						return;
-				}
-
-				// Gehe Vorgaengerbloecke durch
-				for(LLVM_Block previousBlock : actualBlock.getPreviousBlocks()) {
-					// Hole Sprungbefehl des Vorgaengerblocks
-					// Dieser muss ersetzt werden
-					LLVM_GenericCommand branchCommand = previousBlock.getLastCommand();
-					
-					// Befehl aus Registermap austragen
-					this.registerMap.deleteCommand(branchCommand);
-					
-					// Clone für Registermap erstellen
-					LLVM_GenericCommand tmp = new LLVM_ReturnCommand(actualBlock.getFirstCommand().toString(), branchCommand.getPredecessor(), previousBlock);
-					branchCommand.replaceCommand(tmp);
-					
-					// Setze Registermapeintrag neu
-					this.registerMap.addCommand(tmp);
-					
-					// Passe Flussgraph an:
-					// previousBlock hat actualBlock nicht mehr als Nachfolger,
-					previousBlock.removeFromNextBlocks(actualBlock);
-				}
-				toDelete.add(actualBlock);
-			}
+			//}
+		}
+		
+		if(nextFirst!=null) {
+			int index = this.blocks.indexOf(nextFirst);
+			this.blocks.set(0, nextFirst);
+			this.blocks.set(index, lastFirst);
 		}
 
 		// Alle gelöschten Blöcke entfernen
 		for (LLVM_Block del : toDelete){
 			// Entferne zu loeschenden Block aus Flussgraph
-			del.deleteBlock();
+			//del.deleteBlock();
 			
 			// Entferne Befehle aus entferntem Block aus Registermap
 			this.registerMap.deleteCommand(del.getFirstCommand());
@@ -1028,6 +1072,10 @@ public class LLVM_Function {
 			// Entferne zu loeschenden Block aus this.blocks
 			this.blocks.remove(del);
 			this.numberBlocks--;
+		}
+		
+		if(nextFirst!=null) {
+			this.deleteEmptyBlocks();
 		}
 	}
 	
@@ -1158,6 +1206,10 @@ public class LLVM_Function {
 		for(int i=0; i<this.numberBlocks; i++) {
 			
 			LLVM_Block block = this.blocks.get(i);
+			
+			if(i==0) {
+				block.setLabel("");
+			}
 			
 			// Teste ab zweitem Block das Label
 			if(i>0) {
